--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
+  razorpay_flutter: ^1.3.4
 
 dev_dependencies:
   flutter_test:
